--- a/web/index.html
+++ b/web/index.html
@@ -18,23 +18,23 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="우리 아이 건강을 위한 유아식 레시피 커뮤니티. 유레카.">
+  <meta name="description" content="우리 아이의 건강을 위한 유아식 레시피 커뮤니티">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="유레카">
+  <meta name="apple-mobile-web-app-title" content="eureka">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>유레카</title>
+  <title>eureka</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2348400502';
+    var serviceWorkerVersion = '2161260538';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
