--- a/web/index.html
+++ b/web/index.html
@@ -27,9 +27,9 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="eureka_favi.png"/>
 
-  <title>eureka</title>
+  <title>유레카</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
