--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/web/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -31,11 +31,11 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>eureka</title>
-  <link rel="manifest" href="manifest.json">
-
+  
+  <link rel="manifest" href="icons/manifest.json">
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3032626163';
+    var serviceWorkerVersion = '334347837';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
