--- a/web/index.html
+++ b/web/index.html
@@ -30,12 +30,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>유레카</title>
+  <title>eureka</title>
   
   <link rel="manifest" href="icons/manifest.json">
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3753058304';
+    var serviceWorkerVersion = '243601150';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
